# xraylib

./: .bumpversion.cfg  .gitignore  .lgtm.yml  .travis.yml  AUTHORS  BUGS  CITATION.cff  CMakeLists.txt  Changelog  INSTALL  Makefile.am  README  README.md  TODO  appveyor-build-script.sh  appveyor.yml  azure-pipelines.yml  configure.ac  install.sh  install2local.sh  libxrl.pc.in  libxrlcuda.pc.in  libxrlf03.pc.in  license_all.txt  license_teemu.txt  license_tom.txt  meson.build  meson_options.txt  note.txt  pyproject.toml  xraylib.spec  xraylib.spec.in
cplusplus/: Makefile.am  meson.build  xraylib++.h
cplusplus/tests/: Makefile.am  meson.build  test-atomiclevelwidth.cpp  test-atomicweight.cpp  test-compoundparser.cpp  test-crystal_diffraction.cpp  test-nist-compounds.cpp  test-radionuclides.cpp  test-refractive_indices.cpp  test-xrl_functions.cpp
csharp/: AssemblyInfo.cpp  AssemblyInfo.cs  Compound.h  Diffraction.h  Element.h  Errors.h  Program.cs  Radionuclides.h  Stdafx.cpp  XrayLib.NET.cpp  XrayLib.NET.h  meson.build
cuda/: Makefile.am  atomiclevelwidth.cu  atomicweight.cu  auger_trans.cu  comptonprofiles.cu  coskron.cu  cross_sections.cu  cs_barns.cu  cs_line.cu  cudalt.py  densities.cu  edges.cu  fi.cu  fii.cu  fluor_lines.cu  fluor_yield.cu  jump.cu  kissel_pe.cu  polarized.cu  radrate.cu  scattering.cu  splint.cu  xraylib-cuda-private.h  xraylib-cuda.cu  xraylib-cuda.h  xrf_cross_sections_aux.cu
example/: Makefile.am  Makefile.old  meson.build  xrlexample1.c  xrlexample10.rb  xrlexample11.c  xrlexample11.cu  xrlexample12.php  xrlexample13.py  xrlexample14.pas  xrlexample2.pl  xrlexample3.f90  xrlexample4.pro  xrlexample5.pro  xrlexample5.py  xrlexample5.sh  xrlexample6.cpp  xrlexample7.java  xrlexample8.cs  xrlexample9.lua
fortran/: Makefile.am  generate-code.py  install_fortran_mod.py  meson.build  xraylib_wrap.F90  xraylib_wrap.f90  xraylib_wrap_generated.F90
fortran/tests/: Makefile.am  libtest.f90  meson.build  test-atomiclevelwidth.f90  test-atomicweight.f90  test-auger.f90  test-compoundparser.f90  test-comptonprofiles.f90  test-crystal_diffraction.f90  test-nist-compounds.f90  test-radionuclides.f90  test-refractive_indices.f90
idl/: Makefile.am  libxrl.dlm  libxrlidl.dlm  xraylib.pro  xraylib_auger.pro  xraylib_help.pro  xraylib_idl.c  xraylib_lines.pro  xraylib_nist_compounds.pro  xraylib_old.pro  xraylib_radionuclides.pro  xraylib_shells.pro
include/: Makefile.am  crystal_diffraction.h  diff_lines.pro  lines.h  lines.pro  lines_old.h  lines_sorted.h  lines_unsorted.h  meson.build  shells.h  xray_crystal.h  xray_defs.h  xraylib-auger.h  xraylib-aux.h  xraylib-crystal-diffraction.h  xraylib-defs.h  xraylib-deprecated.h  xraylib-error.h  xraylib-lines.h  xraylib-nist-compounds.h  xraylib-parser.h  xraylib-radionuclides.h  xraylib-shells.h  xraylib.h
java/: Crystal_Atom.java  Crystal_Struct.java  GoogleAnalyticsThread.java  Makefile.am  OSGI-MANIFEST.in  Xraylib.java  XraylibException.java  build.gradle.in  compoundData.java  compoundDataBase.java  compoundDataNIST.java  pr_data_java.c  radioNuclideData.java  settings.gradle.in
java/tests/: Makefile.am  TestAtomicLevelWidth.java  TestAtomicWeight.java  TestAuger.java  TestCompoundParser.java  TestComptonProfiles.java  TestCosKron.java  TestCrossSections.java  TestCrossSectionsBarns.java  TestCrossSectionsCompound.java  TestCrossSectionsFluorLine.java  TestCrystalDiffraction.java  TestDensities.java  TestEdges.java  TestFi.java  TestFii.java  TestFluorLines.java  TestFluorYield.java  TestJumpFactor.java  TestKisselPE.java  TestNISTCompounds.java  TestPolarized.java  TestRadRate.java  TestRadioNuclides.java  TestRefractiveIndices.java  TestScattering.java
lua/: Makefile.am
lua/tests/: Makefile.am  luaunit.lua  test-atomiclevelwidth.lua  test-atomicweight.lua  test-auger.lua  test-compoundparser.lua  test-comptonprofiles.lua  test-nist-compounds.lua  test-radionuclides.lua
nsis/: License.rtf  Makefile.am  README  RadioButtons.nsh  libxrl-3-bcc.lib  libxrl-3.exp  libxrl-3.lib  xraylib.iss  xraylib.nsi.in
nsis/dotNet/: AssemblyInfo.cpp  Compound.h  Diffraction.h  Element.h  Makefile.am  ReadMe.txt  Stdafx.cpp  XrayLib.NET.chm  XrayLib.NET.cpp  XrayLib.NET.h  XrayLib.NET.sln  XrayLib.NET.vcproj
nsis/dotNet64/: Example.csproj  Example.sln
nsis/dotNetSrc/: XrayLib_2013.NET.sln  XrayLib_VS2010.NET.sln
nsis/idl/: Makefile.am  libxrlidl.dlm
nsis/idl7.1/: libxrlidl.def  libxrlidl.dlm  libxrlidl.export
nsis/python/: Makefile.am
nsis/python2.6/: _xraylib.pyd  xraylib_wrap.c  xrlsetup.py
nsis/python3.1/: xraylib_wrap.c  xrlexample5_31.py  (+1 more)
pascal/: Makefile.am  generate-code.py  meson.build  xraylib.pas  xraylib_const.pas  xraylib_iface.pas  xraylib_impl.pas  xrlexample14.pas
perl/: Makefile.PL  Makefile.am
python/: Makefile.am  meson.build  xrayhelp.py  xrayhelp.py.in  xraylib  xraylib_np.pyx  xraylib_np_c.pxd  xraymessages.py.in  xrlsetup.py.in
ruby/: Makefile.am
src/: Makefile.am  Makefile.external  Makefile.inline  atomiclevelwidth.c  atomicweight.c  auger_trans.c  comptonprofiles.c  config.h.in  coskron.c  cross_sections.c  crystal_diffraction.c  cs_barns.c  cs_cp.c  cs_line.c  densities.c  edges.c  fi.c  fii.c  fluor_lines.c  fluor_yield.c  initpython.c  jump.c  kissel_pe.c  libxrlidl.dlm  lines.h  meson.build  polarized.c  pr_data.c  prdata  radrate.c  refractive_indices.c  scattering.c  splint.c  splint.h  xray_crystal.c  xray_crystal.h  xray_defs.h  xrayfiles.c  xrayfiles_inline.c  xrayglob.c  (+24 more)
tests/: Makefile.am  meson.build  test-atomiclevelwidth.c  test-atomicweight.c  test-auger.c  test-compoundparser.c  test-comptonprofiles.c  test-coskron.c  test-cross_sections.c  test-crystal_diffraction.c  test-cs_barns.c  test-cs_cp.c  test-cs_line.c  test-densities.c  test-edges.c  test-error.c  test-fi.c  test-fii.c  test-fluor_lines.c  test-fluor_yield.c  test-jump.c  test-kissel_pe.c  test-nist-compounds.c  test-polarized.c  test-radionuclides.c  test-radrate.c  test-refractive_indices.c  test-scattering.c  test-version.c
windows/: Makefile.am  README  meson.build  xraylib.iss
(+276 files in other folders)
